use new model; add child object to rotate around main model

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "author": "Paul Luong",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.149.0",
-    "three-addons": "^1.2.0"
+    "three": "^0.149.0"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
